# wxzy

./: .env.example  .gitignore  AGENT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality.yml
docs/: IMPLEMENTATION_PLAN.md  MVP_CARD_FSRS.md  PRODUCT_PLAN.md
docs/superpowers/: PROJECT_RULES.md  README.md
miniprogram/: app.js  app.json  app.wxss  config.js  project.config.json  sitemap.json
miniprogram/services/: api.js  auth-api.js  http.js  profile-api.js
miniprogram/tests/: test_auth_client.js  test_profile_form.js
miniprogram/utils/: profile-form.js
server/: Dockerfile  README.md  alembic.ini  requirements-dev.txt  requirements.txt
server/app/: auth.py  config.py  db.py  fsrs_simple.py  main.py  models.py  schemas.py  services_cards.py
server/migrations/: env.py
server/seed_data/: candidates_offline_v1.json
server/tests/: conftest.py  test_api_v1.py  test_catalog.py  test_config.py  test_domain_services.py  test_errors.py  test_fsrs_simple.py  test_health_auth.py  test_identity.py  test_learning.py  test_learning_profile_api.py  test_migrations.py  test_review_attempts.py  test_wechat_auth.py
tools/: __init__.py  generate_candidate_cards.py  inventory_scan.py  mineru_jobs.py  mineru_validate.py  quality-gate.sh  quality_checks.py  report_legacy_migration.py  split_pdfs.py
tools/document_pipeline/: __init__.py  budget.py  clean.py  cli_cards.py  cli_inventory.py  cli_jobs.py  cli_mineru.py  cli_split.py  env.py  generation.py  http_client.py  inventory.py  jobs.py  page_mapping.py  pages.py  paths.py  publish.py  quality.py  raw.py  split.py  structure.py
tools/tests/: test_document_clean.py  test_document_inventory.py  test_document_jobs.py  test_document_pipeline_core.py  test_document_quality.py  test_document_raw.py  test_document_split.py  (+6 more)
(+110 files in other folders)
