[project]
name = "wxzy"
version = "0.1.0"
description = "Single-owner Chinese medicine learning service and document pipeline"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0.40,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8.0",
  "httpx>=0.28,<1.0",
  "markdown-it-py>=3.0,<5.0",
  "mypy>=1.15,<2.0",
  "pytest>=8.3,<10.0",
  "ruff>=0.11,<1.0",
  "types-requests>=2.32,<3.0",
]
documents = [
  "pymupdf>=1.25,<2.0",
  "requests>=2.32,<3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["server", "tools"]
extend-exclude = ["data", "docs", "miniprogram"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.3"
addopts = ["--strict-config", "--strict-markers", "-ra"]
markers = ["postgres: run migration checks against an explicitly configured PostgreSQL URL"]
pythonpath = ["server", "."]
testpaths = ["server/tests", "tools/tests"]

[tool.coverage.run]
branch = true
source = ["server/app", "tools"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 20
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
mypy_path = "server"
files = ["server/app", "server/migrations", "tools"]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true
